--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <p>我的主页</p>
             </a>
         </footer>
-        <!--  -->
+        <!--达瓦达瓦  -->
         <script src="./js/flexible.js"></script>
         <!-- 必须引入才能使用轮播图插件 -->
         <script src="./js/swiper.min.js"></script>
